# batman-do-cerrado-pro

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  pyproject.toml
batman_do_cerrado/: cli.py
batman_do_cerrado/config/: settings.toml
batman_do_cerrado/core/: config.py  dispatcher.py  models.py  ui.py  utils.py
batman_do_cerrado/modules/: domain_analyzer.py  fs_monitor.py  ip_analyzer.py  net_monitor.py  nmap_scanner.py  secrets_scanner.py  selfcheck.py  whois.py
batman_do_cerrado_juancs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: settings.toml
tests/: test_domain_analyzer.py  test_fs_monitor.py  test_ip_analyzer.py  test_net_monitor.py  test_nmap_scanner.py  test_secrets_scanner.py  test_selfcheck.py  test_whois_helpers.py  test_whois_integration.py
