# batman-do-cerrado-pro/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batman-do-cerrado-juancs"
version = "2.0.0a3"  # _ALTERADO_: Versão final da Fase 2.
authors = [
    { name = "Juan Carlos", email = "juan.brainfarma@gmail.com" },
    { name = "Cora" },
]
description = "Suíte de segurança pessoal multifacetada para OSINT, Forense e Defesa de Sistemas."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tomli; python_version < '3.11'",
    "requests>=2.28.0",
    "ipwhois>=1.2.0",
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

[project.scripts]
batman = "batman_do_cerrado.cli:main"

[project.urls]
"Homepage" = "https://github.com/JuanCS-Dev/batman-do-cerrado-pro"
"Repository" = "https://github.com/JuanCS-Dev/batman-do-cerrado-pro"
"Bug Tracker" = "https://github.com/JuanCS-Dev/batman-do-cerrado-pro/issues"

[tool.setuptools.packages.find]
# _ALTERADO_: Agora excluímos explicitamente a pasta de testes do pacote final.
exclude = ["tests*"]
