# batman-do-cerrado-pro/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batman-do-cerrado-pro" 
version = "2.1.0a1"
authors = [
    { name = "Juan Carlos", email = "juan.brainfarma@gmail.com" },
    { name = "Cora" },
]
description = "Suíte de segurança pessoal multifacetada para OSINT, Forense e Defesa de Sistemas."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tomli; python_version < '3.11'",
    "requests>=2.28.0",
    "ipwhois>=1.2.0",
    "watchdog>=4.0.0", # <--- ADICIONADO: Dependência para o fs_monitor
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

[project.scripts]
batman = "batman_do_cerrado.cli:main"

[project.urls]
"Homepage" = "https://github.com/JuanCS-Dev/batman-do-cerrado-pro"
"Repository" = "https://github.com/JuanCS-Dev/batman-do-cerrado-pro"
"Bug Tracker" = "https://github.com/JuanCS-Dev/batman-do-cerrado-pro/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"batman_do_cerrado" = ["**/*.toml"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "watchdog>=4.0.0", # <--- ADICIONADO: Dependência de teste
]
